# study-go

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  main.go
cmd/helloctl/: BUILD.bazel  main.go
crs/: BUILD.bazel
pkg/apis/sample/v1alpha1/: BUILD.bazel  doc.go  register.go  types.go  zz_generated.deepcopy.go
tools/: clientgen.sh  kubegen.sh
tools/codegen/: BUILD.bazel
tools/k8s-codegen/: BUILD.bazel  kube_codegen.sh  run.sh
yaml/: cr.yaml  crd.yaml
