load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

gazelle(name = "gazelle")

sh_binary(
    name = "clientgen",
    srcs = ["tools/clientgen.sh"],
    data = [
        "@io_k8s_code_generator//cmd/client-gen:client-gen",
        "hack/boilerplate.go.txt",
    ],
    args = [
        "$(location @io_k8s_code_generator//cmd/client-gen:client-gen)",
        "hack/boilerplate.go.txt",
        "github.com/felipe1496/hello_go",
        "pkg/generated/clientset",
        "pkg/generated/clientset",
    ],
)

sh_binary(
    name = "kubegen",
    srcs = ["tools/kubegen.sh"],
    data = [
        "@io_k8s_code_generator//cmd/deepcopy-gen:deepcopy-gen",
        "hack/boilerplate.go.txt",
    ],
    args = [
        "$(location @io_k8s_code_generator//cmd/deepcopy-gen:deepcopy-gen)",
        "$(location hack/boilerplate.go.txt)",
        "github.com/felipe1496/hello_go/pkg/apis/sample/v1alpha1",
    ],
)

alias(
    name = "hello_go",
    actual = "//cmd/helloctl:helloctl",
    visibility = ["//visibility:public"],
)