load("@rules_go//go:def.bzl", "go_library", "go_binary")

go_library(
    name = "helloctl_lib",
    srcs = ["main.go"],
    importpath = "github.com/felipe1496/hello_go/cmd/helloctl",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_spf13_cobra//:cobra",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//tools/clientcmd",
        "@io_k8s_client_go//util/homedir",
    ],
)

go_binary(
    name = "helloctl",
    embed = [":helloctl_lib"],
    visibility = ["//visibility:public"],
)